examples/demo/tests/requests/snapshots/get_notes_withnext_page@notes_request.snap
---
source: tests/requests/notes.rs
expression: "(notes.status_code(), notes.text())"
---
(
    200,
    "{\"results\":[{\"id\":ID,\"title\":\"Loco  11\",\"content\":\"content 11\"}],\"pagination\":{\"page\":2,\"page_size\":10,\"total_pages\":2}}",
)
