examples/demo/tests/requests/snapshots/get_validate_user_login_flow.snap
---
source: tests/requests/main.rs
expression: current_user_request.text()
---
"{\"pid\":\"PID\",\"name\":\"framework\",\"email\":\"test@framework.com\"}"
