examples/demo/tests/requests/snapshots/insert@cache.snap
---
source: tests/requests/cache.rs
expression: "(response.text(), response.status_code())"
---
(
    "",
    200,
)
