examples/demo/tests/requests/snapshots/key_not_exists@cache.snap
---
source: tests/requests/cache.rs
expression: "(response.text(), response.status_code())"
---
(
    "{\"value\":null}",
    200,
)
