examples/demo/tests/requests/snapshots/login_with_invalid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    404,
    "{\"error\":\"not_found\",\"description\":\"Resource was not found\"}",
)
