examples/demo/tests/requests/snapshots/ping_with_trailing_slash@ping_request.snap
---
source: tests/requests/ping.rs
expression: "(response.text(), response.status_code())"
---
(
    "{\"ok\":true}",
    200,
)
