examples/demo/tests/requests/snapshots/read_cache_key@cache.snap
---
source: tests/requests/cache.rs
expression: "(response.text(), response.status_code())"
---
(
    "{\"value\":\"loco cache value\"}",
    200,
)
