examples/demo/tests/requests/snapshots/simple@view_engine.snap
---
source: tests/requests/view_engine.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "Loco website",
)
